form align fix

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -14,10 +14,11 @@
 .blogtitle h1, .blogbody p {
     //margin-bottom: 30px;
     //text-align: left;
+    
 }
 
-form {
-    float: none; 
+.main .blog p {
+    float: none;
      
 }
 
